entity module code changes

--- a/h-charity-api/src/main/resources/application.yml
+++ b/h-charity-api/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: cbios-api
+    name: h-charity-api
   datasource:
     url: jdbc:mariadb://localhost:3306/hcharity
     username: root
