--- a/h-charity-api/pom.xml
+++ b/h-charity-api/pom.xml
@@ -90,6 +90,11 @@
 			<version>1.6.0.Beta2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.20</version>
+		</dependency>
 	</dependencies>
 
 	<build>
