--- a/h-charity-api/src/main/resources/application.yml
+++ b/h-charity-api/src/main/resources/application.yml
@@ -30,3 +30,6 @@ jwt:
 
 stripe:
   secret-key: YOUR_STRIPE_SECRET_KEY
+
+images:
+  default-image: 'http://localhost:8080/api/v1/files/uploads/static/mosque_image.jpg'
