--- a/h-charity-ui/src/assets/appeals.json
+++ b/h-charity-ui/src/assets/appeals.json
@@ -1,92 +1,325 @@
 [
     {
-        "accountHolderName": "Abc",
-        "accountHolderNumber": "0000000000000000000",
-        "accumulatedAmount": 1200,
-        "appealCategory": "general-fund",
-        "balanceAmount": 7800,
-        "bankName": "Axis Bank",
-        "branchname": "Mehdhipthnam",
-        "costInvolve": 10000,
-        "description": "<p>abc</p>",
-        "documents": "",
-        "ifsc": "00000000000",
-        "photos": "",
-        "title": "Mats",
-        "upiId": "abc12@okaxis",
-        "upiNumber": "7894561231",
-        "upiQRCode": "abc@okaxis"
+        "id": 2,
+        "title": "Renovation of Wudu Area",
+        "description": "The wudu area is essential for worshippers to perform their ablutions before prayer. It needs renovation to ensure cleanliness and convenience. The total funds required for this initiative are 20,000. We have currently received 10,000 and need an additional 10,000 to meet our goal. Your generous contribution will help us provide a better wudu area for all.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid An-Noor",
+        "totalFundsRequired": 20000,
+        "fundsReceived": 10000,
+        "fundsNeeded": 10000,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Yusuf",
+        "appealerMobile": "7894561230",
+        "requirementDate": "2024-08-25",
+        "verifier": "Omar",
+        "verifierMobile": "9638527891",
+        "verifiedDate": "2024-07-30"
     },
     {
-        "accountHolderName": "Abc",
-        "accountHolderNumber": "0000000000000000000",
-        "accumulatedAmount": 1200,
-        "appealCategory": "general-fund",
-        "balanceAmount": 7800,
-        "bankName": "Axis Bank",
-        "branchname": "Mehdhipthnam",
-        "costInvolve": 10000,
-        "description": "<p>abc</p>",
-        "documents": "",
-        "ifsc": "00000000000",
-        "photos": "",
-        "title": "Mats",
-        "upiId": "abc12@okaxis",
-        "upiNumber": "7894561231",
-        "upiQRCode": "abc@okaxis"
+        "id": 3,
+        "title": "Quran Donation",
+        "description": "We aim to provide worshippers with copies of the Quran to enhance their spiritual knowledge. The total funds required for this initiative are 5,000. We have currently received 2,500 and need an additional 2,500 to meet our goal. Your generous contribution will help us distribute Qurans to the community.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid Al-Huda",
+        "totalFundsRequired": 5000,
+        "fundsReceived": 2500,
+        "fundsNeeded": 2500,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Mustafa",
+        "appealerMobile": "7894567412",
+        "requirementDate": "2024-08-20",
+        "verifier": "Ali",
+        "verifierMobile": "9638529874",
+        "verifiedDate": "2024-07-28"
     },
     {
-        "accountHolderName": "Abc",
-        "accountHolderNumber": "0000000000000000000",
-        "accumulatedAmount": 1200,
-        "appealCategory": "general-fund",
-        "balanceAmount": 7800,
-        "bankName": "Axis Bank",
-        "branchname": "Mehdhipthnam",
-        "costInvolve": 10000,
-        "description": "<p>abc</p>",
-        "documents": "",
-        "ifsc": "00000000000",
-        "photos": "",
-        "title": "Mats",
-        "upiId": "abc12@okaxis",
-        "upiNumber": "7894561231",
-        "upiQRCode": "abc@okaxis"
+        "id": 4,
+        "title": "Air Conditioning for Prayer Hall",
+        "description": "To provide a comfortable environment for worshippers during prayers, we need to install air conditioning units in the prayer hall. The total funds required for this initiative are 30,000. We have currently received 15,000 and need an additional 15,000 to meet our goal. Your generous contribution will help us create a comfortable praying environment for all.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid Al-Salam",
+        "totalFundsRequired": 30000,
+        "fundsReceived": 15000,
+        "fundsNeeded": 15000,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Ibrahim",
+        "appealerMobile": "7894568523",
+        "requirementDate": "2024-09-01",
+        "verifier": "Hamza",
+        "verifierMobile": "9638523214",
+        "verifiedDate": "2024-07-26"
     },
     {
-        "accountHolderName": "Abc",
-        "accountHolderNumber": "0000000000000000000",
-        "accumulatedAmount": 1200,
-        "appealCategory": "general-fund",
-        "balanceAmount": 7800,
-        "bankName": "Axis Bank",
-        "branchname": "Mehdhipthnam",
-        "costInvolve": 10000,
-        "description": "<p>abc</p>",
-        "documents": "",
-        "ifsc": "00000000000",
-        "photos": "",
-        "title": "Mats",
-        "upiId": "abc12@okaxis",
-        "upiNumber": "7894561231",
-        "upiQRCode": "abc@okaxis"
+        "id": 5,
+        "title": "Repair of Mosque Roof",
+        "description": "The mosque roof requires urgent repair to prevent leaks and ensure safety. The total funds required for this initiative are 25,000. We have currently received 12,500 and need an additional 12,500 to meet our goal. Your generous contribution will help us maintain the mosque's structure and safety.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid Al-Rahman",
+        "totalFundsRequired": 25000,
+        "fundsReceived": 12500,
+        "fundsNeeded": 12500,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Abdullah",
+        "appealerMobile": "7894569632",
+        "requirementDate": "2024-09-10",
+        "verifier": "Khalid",
+        "verifierMobile": "9638524567",
+        "verifiedDate": "2024-07-27"
     },
     {
-        "accountHolderName": "Abc",
-        "accountHolderNumber": "0000000000000000000",
-        "accumulatedAmount": 1200,
-        "appealCategory": "general-fund",
-        "balanceAmount": 7800,
-        "bankName": "Axis Bank",
-        "branchname": "Mehdhipthnam",
-        "costInvolve": 10000,
-        "description": "<p>abc</p>",
-        "documents": "",
-        "ifsc": "00000000000",
-        "photos": "",
-        "title": "Mats",
-        "upiId": "abc12@okaxis",
-        "upiNumber": "7894561231",
-        "upiQRCode": "abc@okaxis"
+        "id": 6,
+        "title": "Lighting for Mosque Exterior",
+        "description": "To ensure safety and visibility during evening prayers, we need to install lighting around the mosque exterior. The total funds required for this initiative are 10,000. We have currently received 5,000 and need an additional 5,000 to meet our goal. Your generous contribution will help us provide a safe environment for worshippers.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid An-Nur",
+        "totalFundsRequired": 10000,
+        "fundsReceived": 5000,
+        "fundsNeeded": 5000,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Hassan",
+        "appealerMobile": "7894563571",
+        "requirementDate": "2024-08-30",
+        "verifier": "Yahya",
+        "verifierMobile": "9638526547",
+        "verifiedDate": "2024-07-29"
+    },
+    {
+        "id": 7,
+        "title": "Sound System Upgrade",
+        "description": "The mosque's sound system needs an upgrade to ensure clear and audible recitations during prayers. The total funds required for this initiative are 15,000. We have currently received 7,500 and need an additional 7,500 to meet our goal. Your generous contribution will help us provide a better auditory experience for all worshippers.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid Al-Madina",
+        "totalFundsRequired": 15000,
+        "fundsReceived": 7500,
+        "fundsNeeded": 7500,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Saif",
+        "appealerMobile": "7894568521",
+        "requirementDate": "2024-09-05",
+        "verifier": "Ayman",
+        "verifierMobile": "9638522587",
+        "verifiedDate": "2024-07-28"
+    },
+    {
+        "id": 8,
+        "title": "Children's Quran Classes",
+        "description": "We aim to start Quran classes for children in our community to enhance their religious education. The total funds required for this initiative are 8,000. We have currently received 4,000 and need an additional 4,000 to meet our goal. Your generous contribution will help us provide educational resources for the children.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid Al-Furqan",
+        "totalFundsRequired": 8000,
+        "fundsReceived": 4000,
+        "fundsNeeded": 4000,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Rashid",
+        "appealerMobile": "7894567413",
+        "requirementDate": "2024-08-22",
+        "verifier": "Imran",
+        "verifierMobile": "9638527895",
+        "verifiedDate": "2024-07-30"
+    },
+    {
+        "id": 9,
+        "title": "Mosque Carpet Replacement",
+        "description": "The mosque carpet is worn out and needs replacement to maintain a clean and comfortable praying environment. The total funds required for this initiative are 18,000. We have currently received 9,000 and need an additional 9,000 to meet our goal. Your generous contribution will help us provide a better praying environment for all.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid Al-Aqsa",
+        "totalFundsRequired": 18000,
+        "fundsReceived": 9000,
+        "fundsNeeded": 9000,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Bilal",
+        "appealerMobile": "7894569633",
+        "requirementDate": "2024-09-15",
+        "verifier": "Zaid",
+        "verifierMobile": "9638523578",
+        "verifiedDate": "2024-07-26"
+    },
+    {
+        "id": 10,
+        "title": "Library Books for Islamic Studies",
+        "description": "We aim to establish a library with books on Islamic studies to enhance the community's knowledge. The total funds required for this initiative are 12,000. We have currently received 6,000 and need an additional 6,000 to meet our goal. Your generous contribution will help us provide valuable resources for the community.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid An-Noor",
+        "totalFundsRequired": 12000,
+        "fundsReceived": 6000,
+        "fundsNeeded": 6000,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Tariq",
+        "appealerMobile": "7894561234",
+        "requirementDate": "2024-08-28",
+        "verifier": "Naveed",
+        "verifierMobile": "9638523579",
+        "verifiedDate": "2024-07-27"
+    },
+    {
+        "id": 11,
+        "title": "Security System Installation",
+        "description": "To ensure the safety of worshippers and the mosque premises, we need to install a security system. The total funds required for this initiative are 22,000. We have currently received 11,000 and need an additional 11,000 to meet our goal. Your generous contribution will help us provide a secure environment for all.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid Al-Kabeer",
+        "totalFundsRequired": 22000,
+        "fundsReceived": 11000,
+        "fundsNeeded": 11000,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Salman",
+        "appealerMobile": "7894563214",
+        "requirementDate": "2024-09-20",
+        "verifier": "Faisal",
+        "verifierMobile": "9638524568",
+        "verifiedDate": "2024-07-28"
+    },
+    {
+        "id": 12,
+        "title": "Eid Celebration Fund",
+        "description": "We aim to organize a grand Eid celebration for the community. The total funds required for this initiative are 10,000. We have currently received 5,000 and need an additional 5,000 to meet our goal. Your generous contribution will help us provide a joyful Eid celebration for all.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid Al-Taqwa",
+        "totalFundsRequired": 10000,
+        "fundsReceived": 5000,
+        "fundsNeeded": 5000,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Suhail",
+        "appealerMobile": "7894568522",
+        "requirementDate": "2024-09-25",
+        "verifier": "Adil",
+        "verifierMobile": "9638523215",
+        "verifiedDate": "2024-07-29"
+    },
+    {
+        "id": 13,
+        "title": "Monthly Community Iftar",
+        "description": "We aim to organize a monthly community iftar during Ramadan. The total funds required for this initiative are 15,000. We have currently received 7,500 and need an additional 7,500 to meet our goal. Your generous contribution will help us provide iftar meals for the community.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid Al-Firdous",
+        "totalFundsRequired": 15000,
+        "fundsReceived": 7500,
+        "fundsNeeded": 7500,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Zubair",
+        "appealerMobile": "7894567414",
+        "requirementDate": "2024-08-15",
+        "verifier": "Anas",
+        "verifierMobile": "9638529876",
+        "verifiedDate": "2024-07-26"
+    },
+    {
+        "id": 14,
+        "title": "Islamic Seminar Fund",
+        "description": "We aim to organize an Islamic seminar to enhance the community's religious knowledge. The total funds required for this initiative are 12,000. We have currently received 6,000 and need an additional 6,000 to meet our goal. Your generous contribution will help us provide valuable religious education.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid Al-Hikmah",
+        "totalFundsRequired": 12000,
+        "fundsReceived": 6000,
+        "fundsNeeded": 6000,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Faizan",
+        "appealerMobile": "7894569634",
+        "requirementDate": "2024-09-10",
+        "verifier": "Hamad",
+        "verifierMobile": "9638523570",
+        "verifiedDate": "2024-07-27"
+    },
+    {
+        "id": 15,
+        "title": "Installation of Solar Panels",
+        "description": "To reduce the mosque's electricity expenses and promote sustainability, we aim to install solar panels. The total funds required for this initiative are 40,000. We have currently received 20,000 and need an additional 20,000 to meet our goal. Your generous contribution will help us achieve energy efficiency.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid Al-Khair",
+        "totalFundsRequired": 40000,
+        "fundsReceived": 20000,
+        "fundsNeeded": 20000,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Asim",
+        "appealerMobile": "7894567415",
+        "requirementDate": "2024-09-15",
+        "verifier": "Naeem",
+        "verifierMobile": "9638527897",
+        "verifiedDate": "2024-07-28"
+    },
+    {
+        "id": 16,
+        "title": "Mosque Garden Maintenance",
+        "description": "To maintain the beauty and serenity of the mosque garden, we need funds for its upkeep. The total funds required for this initiative are 5,000. We have currently received 2,500 and need an additional 2,500 to meet our goal. Your generous contribution will help us keep the garden well-maintained.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid Al-Basit",
+        "totalFundsRequired": 5000,
+        "fundsReceived": 2500,
+        "fundsNeeded": 2500,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Farhan",
+        "appealerMobile": "7894563215",
+        "requirementDate": "2024-08-25",
+        "verifier": "Sami",
+        "verifierMobile": "9638526549",
+        "verifiedDate": "2024-07-29"
+    },
+    {
+        "id": 17,
+        "title": "Water Cooler Installation",
+        "description": "To provide cool and clean drinking water for worshippers, we need to install water coolers. The total funds required for this initiative are 6,000. We have currently received 3,000 and need an additional 3,000 to meet our goal. Your generous contribution will help us provide refreshing water for all.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid Al-Munawwarah",
+        "totalFundsRequired": 6000,
+        "fundsReceived": 3000,
+        "fundsNeeded": 3000,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Adnan",
+        "appealerMobile": "7894568524",
+        "requirementDate": "2024-09-05",
+        "verifier": "Nasser",
+        "verifierMobile": "9638521235",
+        "verifiedDate": "2024-07-28"
+    },
+    {
+        "id": 18,
+        "title": "New Chairs for Elderly Worshippers",
+        "description": "To provide comfort for elderly worshippers, we need to purchase new chairs. The total funds required for this initiative are 3,000. We have currently received 1,500 and need an additional 1,500 to meet our goal. Your generous contribution will help us provide comfortable seating for elderly worshippers.",
+        "selfOfBehalf": true,
+        "onBehalfName": "Masjid Al-Hameed",
+        "totalFundsRequired": 3000,
+        "fundsReceived": 1500,
+        "fundsNeeded": 1500,
+        "isZakatEligible": true,
+        "isIntrestEligible": false,
+        "isAnonymous": true,
+        "appealer": "Kamran",
+        "appealerMobile": "7894569635",
+        "requirementDate": "2024-09-15",
+        "verifier": "Bashir",
+        "verifierMobile": "9638523571",
+        "verifiedDate": "2024-07-27"
     }
 ]
