--- a/h-charity-api/src/main/resources/application.yml
+++ b/h-charity-api/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/hcharity
     username: root
-    password: root
+    password: Naaz@123
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     show-sql: true
