--- a/h-charity-ui/package.json
+++ b/h-charity-ui/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.1.3",
     "chart.js": "^3.3.2",
     "ngx-image-compress": "^15.1.6",
+    "open": "^10.1.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.6",
